[package]
name = "cross-data"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.28"
clap = { version = "4.4.2", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.20"
r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"
regex = "1.9.5"
reqwest = { version = "0.11.20", features = ["json"] }
rusqlite = "0.29.0"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["macros", "rt"] }
